--- a/packages/observable-shim/package.json
+++ b/packages/observable-shim/package.json
@@ -2,8 +2,15 @@
     "name": "@hpcc-js/observable-shim",
     "version": "2.2.0",
     "description": "hpcc-js - Observable Shim",
-    "main": "dist/index.es6.js",
-    "module": "lib-es6/index",
+    "exports": {
+        ".": {
+            "types": "./types/index.d.ts",
+            "import": "./dist/index.js",
+            "require": "./dist/index.cjs"
+        }
+    },
+    "main": "dist/index.cjs",
+    "module": "dist/index.js",
     "types": "types/index.d.ts",
     "typesVersions": {
         "<3.8": {
@@ -14,10 +21,8 @@
     },
     "files": [
         "dist/*",
-        "lib-es6/*",
         "types/*",
-        "types-3.4/*",
-        "src/*"
+        "types-3.4/*"
     ],
     "scripts": {
         "clean": "rimraf lib* types dist *.tsbuildinfo",
