--- a/packages/observablehq-compiler/package.json
+++ b/packages/observablehq-compiler/package.json
@@ -12,8 +12,9 @@
     ],
     "exports": {
         ".": {
-            "types": "./types/index.d.ts",
+            "types": "./types/browser/index.d.ts",
             "node": {
+                "types": "./types/node/index.d.ts",
                 "import": "./dist/index.node.es6.js",
                 "require": "./dist/index.node.js"
             },
@@ -59,6 +60,7 @@
         "lint": "eslint ./src",
         "docs": "typedoc --options tdoptions.json .",
         "dev-start": "ws",
+        "test-node": "mocha ./dist/test.node.js --reporter spec",
         "update": "npx --yes npm-check-updates -u -t minor"
     },
     "dependencies": {
