--- a/packages/chart/.vscode/launch.json
+++ b/packages/chart/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "name": "index.html",
             "request": "launch",
-            "type": "pwa-msedge",
+            "type": "msedge",
             "url": "file:///${workspaceRoot}/index.html",
             "webRoot": "${workspaceFolder}"
         },
