--- a/packages/observablehq-compiler/package.json
+++ b/packages/observablehq-compiler/package.json
@@ -63,6 +63,7 @@
     "devDependencies": {
         "@hpcc-js/bundle": "^2.11.3",
         "@observablehq/runtime": "4.28.0",
+        "@types/node": "16.11.68",
         "tslib": "2.4.0"
     },
     "repository": {
