feat:  Bump ws_logaccess to latest version
Signed-off-by: Gordon Smith <GordonJSmith@gmail.com>

--- a/packages/comms/.vscode/launch.json
+++ b/packages/comms/.vscode/launch.json
@@ -5,6 +5,19 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "wsdl",
+            "request": "launch",
+            "runtimeArgs": [
+                "run-script",
+                "wsdl-logaccess"
+            ],
+            "runtimeExecutable": "npm",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "type": "node"
+        },
+        {
             "name": "index.html",
             "type": "msedge",
             "request": "launch",
