--- a/packages/observablehq-compiler/package.json
+++ b/packages/observablehq-compiler/package.json
@@ -63,6 +63,7 @@
     "devDependencies": {
         "@hpcc-js/bundle": "^2.11.5",
         "@observablehq/runtime": "5.9.7",
+        "rollup": "4.12.0",
         "tslib": "2.6.2"
     },
     "repository": {
