--- a/packages/observablehq-compiler/.vscode/launch.json
+++ b/packages/observablehq-compiler/.vscode/launch.json
@@ -5,20 +5,6 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch Edge",
-            "request": "launch",
-            "type": "msedge",
-            "url": "index.html",
-            "webRoot": "${workspaceFolder}"
-        },
-        {
-            "type": "vscode-edge-devtools.debug",
-            "request": "launch",
-            "name": "Launch Microsoft Edge and open the Edge DevTools",
-            "url": "index.html",
-            "webRoot": "${workspaceFolder}"
-        },
-        {
             "name": "test-node",
             "request": "launch",
             "runtimeArgs": [
@@ -37,6 +23,17 @@
             "request": "launch",
             "url": "${workspaceFolder}/test.html",
             "webRoot": "${workspaceFolder}"
+        },
+        {
+            "name": "index.html (ws-dev)",
+            "type": "msedge",
+            "request": "launch",
+            "url": "http://172.27.235.23:8080/index.html",
+            "webRoot": "${workspaceFolder}",
+            "runtimeArgs": [
+                "--allow-file-access-from-files",
+                "--disable-web-security"
+            ]
         },
         {
             "name": "index.html (file)",
