--- a/packages/observable-shim/package.json
+++ b/packages/observable-shim/package.json
@@ -20,7 +20,9 @@
     ],
     "scripts": {
         "clean": "rimraf lib* types dist *.tsbuildinfo",
-        "gen-libs": "observable build --debug",
+        "gen-libs": "run-script-os",
+        "gen-libs:windows": "wsl -e npm exec -- @observablehq/framework build",
+        "gen-libs:default:": "npm exec -- @observablehq/framework build",
         "compile-es6": "tsc --module es2020 --outDir ./lib-es6",
         "compile-es6-watch": "npm run compile-es6 -- -w",
         "bundle": "rollup -c",
@@ -33,7 +35,8 @@
     "devDependencies": {
         "@hpcc-js/bundle": "^2.11.5",
         "@observablehq/parser": "6.1.0",
-        "@observablehq/framework": "1.0.0"
+        "@observablehq/framework": "1.0.0",
+        "run-script-os": "1.1.6"
     },
     "repository": {
         "type": "git",
