chore:  Bump minor versions
Signed-off-by: Gordon Smith <GordonJSmith@gmail.com>

--- a/package.json
+++ b/package.json
@@ -111,37 +111,37 @@
     "serve-docs-build": "vitepress serve --port 3000 .",
     "serve-vite": "vite",
     "dev-start": "ws",
-    "update-workspaces": "lerna run --stream update",
+    "update-workspaces": "lerna run update --stream --concurrency 1",
     "update-root": "npx npm-check-updates -u -t minor",
-    "update": "run-p update-workspaces update-root"
+    "update": "run-s update-workspaces update-root"
   },
   "devDependencies": {
     "@larscom/cpx": "2.1.0",
-    "@microsoft/api-documenter": "7.24.1",
-    "@microsoft/api-extractor": "7.43.0",
-    "@microsoft/api-extractor-model": "7.28.13",
+    "@microsoft/api-documenter": "7.25.4",
+    "@microsoft/api-extractor": "7.47.0",
+    "@microsoft/api-extractor-model": "7.29.2",
     "@rollup/plugin-alias": "3.1.9",
     "@rollup/plugin-commonjs": "21.1.0",
     "@rollup/plugin-node-resolve": "13.3.0",
     "@rollup/plugin-typescript": "8.5.0",
-    "@types/chai": "4.3.14",
+    "@types/chai": "4.3.16",
     "@types/mocha": "9.1.1",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
     "chai": "4.4.1",
     "copy-webpack-plugin": "10.2.4",
     "copyfiles": "2.4.1",
-    "css-loader": "6.10.0",
+    "css-loader": "6.11.0",
     "dojo-webpack-plugin": "3.0.6",
     "downlevel-dts": "0.11.0",
     "esbuild-plugin-alias": "^0.2.1",
     "eslint": "8.57.0",
-    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-hooks": "4.6.2",
     "lerna": "5.6.2",
-    "local-web-server": "5.3.1",
+    "local-web-server": "5.3.3",
     "mocha": "9.2.2",
     "mocha-headless-chrome": "4.0.0",
-    "npm-check-updates": "16.14.18",
+    "npm-check-updates": "16.14.20",
     "npm-run-all": "4.1.5",
     "postcss": "8.4.38",
     "puppeteer": "21.11.0",
@@ -153,12 +153,12 @@
     "rollup-plugin-transform-tagged-template": "0.0.3",
     "source-map-loader": "3.0.2",
     "style-loader": "3.3.4",
-    "terser": "5.30.0",
+    "terser": "5.31.1",
     "terser-webpack-plugin": "5.3.10",
-    "typescript": "5.4.3",
+    "typescript": "5.5.2",
     "url-loader": "4.1.1",
     "vitepress": "0.22.4",
-    "webpack": "5.91.0",
+    "webpack": "5.92.1",
     "webpack-cli": "5.1.4",
     "webpack-hasjs-plugin": "1.0.4"
   },
