--- a/demos/react/typescript/package.json
+++ b/demos/react/typescript/package.json
@@ -17,7 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^18",
-    "typescript": "^4.9.5"
+    "typescript": "5.5.2"
   },
   "scripts": {
     "clean": "rimraf ./node_modules/.cache",
