--- a/package.json
+++ b/package.json
@@ -87,12 +87,10 @@
     "lint": "lerna run lint",
     "lint-all": "lerna run --no-bail lint -- -- --max-warnings=0",
     "lint-fix": "lerna run --no-bail lint -- -- --fix",
-    "test-gallery": "lerna run test --scope \"@hpcc-js/demo-gallery\"",
-    "test-webpack": "lerna run test --concurrency 1 --scope \"@hpcc-js/test-*\"",
-    "test": "run-s test-webpack test-gallery",
+    "test": "lerna run test --scope \"@hpcc-js/test-*\" --scope \"@hpcc-js/demo-gallery\"",
     "test:chrome": "lerna run test:chrome --scope \"@hpcc-js/test-*\"",
     "test:firefox": "lerna run test:firefox --scope \"@hpcc-js/test-*\"",
-    "test:ie": "lerna run test:ie --concurrency 1 --scope \"@hpcc-js/test-*\"",
+    "test:ie": "lerna run test:ie --scope \"@hpcc-js/test-*\"",
     "publish-clean-lint": "run-p lint clean",
     "publish-changed": "lerna changed",
     "publish-version": "lerna version --no-push --yes",
@@ -111,7 +109,7 @@
     "serve-docs-build": "vitepress serve --port 3000 .",
     "serve-vite": "vite",
     "dev-start": "ws",
-    "update-workspaces": "npm run update --workspaces --if-present",
+    "update-workspaces": "lerna run --stream update",
     "update-root": "npx npm-check-updates -u -t minor",
     "update": "run-p update-workspaces update-root"
   },
@@ -137,12 +135,13 @@
     "esbuild-plugin-alias": "^0.2.1",
     "eslint": "8.57.0",
     "eslint-plugin-react-hooks": "4.6.2",
-    "lerna": "5.6.2",
+    "lerna": "8.1.5",
     "local-web-server": "5.3.3",
     "mocha": "9.2.2",
     "mocha-headless-chrome": "4.0.0",
     "npm-check-updates": "16.14.20",
     "npm-run-all": "4.1.5",
+    "nx": "19.3.2",
     "postcss": "8.4.38",
     "puppeteer": "21.11.0",
     "rimraf": "3.0.2",
