--- a/package.json
+++ b/package.json
@@ -85,8 +85,8 @@
     "build-min": "run-s build minimize",
     "watch": "tsc --build --watch --verbose",
     "lint": "lerna run lint",
-    "lint-all": "lerna run --no-bail lint -- -- --max-warnings=0",
-    "lint-fix": "lerna run --no-bail lint -- -- --fix",
+    "lint-all": "lerna run --no-bail lint -- --max-warnings=0",
+    "lint-fix": "lerna run --no-bail lint -- --fix",
     "test": "lerna run test --scope \"@hpcc-js/test-*\" --scope \"@hpcc-js/demo-gallery\"",
     "test:chrome": "lerna run test:chrome --scope \"@hpcc-js/test-*\"",
     "test:firefox": "lerna run test:firefox --scope \"@hpcc-js/test-*\"",
