--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   ],
   "scripts": {
     "uninstall": "lerna clean && rimraf demos/**/node_modules apps/**/node_modules",
-    "clean-root": "rimraf build coverage dist lib* types temp tmp *.tsbuildinfo .vitepress/dist .vitepress/cache docs/api",
+    "clean-root": "rimraf --glob build coverage dist lib* types temp tmp *.tsbuildinfo .vitepress/dist .vitepress/cache docs/api",
     "clean": "lerna run clean && npm run clean-root",
     "stamp": "lerna run stamp",
     "stamp-main": "node ./utils/bundle/src/stamp-main.js",
@@ -126,8 +126,7 @@
     "@types/mocha": "9.1.1",
     "@typescript-eslint/eslint-plugin": "7.14.1",
     "@typescript-eslint/parser": "7.14.1",
-    "chai": "4.4.1",
-    "copy-webpack-plugin": "10.2.4",
+    "chai": "5.1.1",
     "copyfiles": "2.4.1",
     "css-loader": "6.11.0",
     "dojo-webpack-plugin": "3.0.6",
@@ -137,14 +136,14 @@
     "eslint-plugin-react-hooks": "4.6.2",
     "lerna": "8.1.5",
     "local-web-server": "5.3.3",
-    "mocha": "9.2.2",
+    "mocha": "10.5.2",
     "mocha-headless-chrome": "4.0.0",
     "npm-check-updates": "16.14.20",
     "npm-run-all": "4.1.5",
     "nx": "19.3.2",
     "postcss": "8.4.38",
     "puppeteer": "21.11.0",
-    "rimraf": "3.0.2",
+    "rimraf": "5.0.7",
     "rollup": "2.79.1",
     "rollup-plugin-postcss": "4.0.2",
     "rollup-plugin-sourcemaps": "0.6.3",
