--- a/packages/observablehq-compiler/package.json
+++ b/packages/observablehq-compiler/package.json
@@ -33,7 +33,7 @@
         "src/*"
     ],
     "scripts": {
-        "clean": "rimraf lib* dist* types *.tsbuildinfo",
+        "clean": "rimraf --glob lib* dist* types *.tsbuildinfo",
         "compile-es6": "tsc --module es2020 --outDir ./lib-es6",
         "compile-es6-watch": "npm run compile-es6 -- -w",
         "compile-umd": "tsc --module umd --outDir ./lib-umd",
