--- a/apps/dashPOC/package.json
+++ b/apps/dashPOC/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "name": "dashpoc",
     "scripts": {
-        "clean": "rimraf lib* types dist *.tsbuildinfo",
+        "clean": "rimraf --glob lib* types dist *.tsbuildinfo",
         "compile-es6": "tsc --module es6 --outDir ./lib-es6",
         "compile-es6-watch": "npm run compile-es6 -- -w",
         "compile-umd": "tsc --module umd --outDir ./lib-umd",
@@ -23,7 +23,7 @@
         "tslib": "2.3.0"
     },
     "devDependencies": {
-        "rimraf": "2.6.3",
+        "rimraf": "5.0.7",
         "rollup": "0.59.2",
         "webpack": "4.41.5",
         "webpack-cli": "3.3.10"
