--- a/demos/gallery/package.json
+++ b/demos/gallery/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "name": "@hpcc-js/demo-gallery",
     "scripts": {
-        "clean": "rimraf types dist *.tsbuildinfo",
+        "clean": "rimraf --glob types dist *.tsbuildinfo",
         "compile-umd": "tsc --module umd --outDir ./src-umd",
         "compile-umd-watch": "npm run compile-umd -- -w",
         "gen-filejson": "node ./util/dir2json ./samples",
