--- a/demos/imdb/package.json
+++ b/demos/imdb/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "name": "@hpcc-js/demo-imdb",
     "scripts": {
-        "clean": "rimraf lib* types dist *.tsbuildinfo",
+        "clean": "rimraf --glob lib* types dist *.tsbuildinfo",
         "compile-umd": "tsc --module umd --outDir ./lib-umd",
         "compile-umd-watch": "npm run compile-umd -- -w",
         "build-docs": "typedoc --readme none --out ./doc ./src/index.ts",
@@ -22,6 +22,6 @@
         "tslib": "2.6.3"
     },
     "devDependencies": {
-        "rimraf": "2.7.1"
+        "rimraf": "5.0.7"
     }
 }
