--- a/demos/react/typescript/package.json
+++ b/demos/react/typescript/package.json
@@ -20,7 +20,7 @@
     "typescript": "5.5.2"
   },
   "scripts": {
-    "clean": "rimraf ./node_modules/.cache",
+    "clean": "rimraf --glob ./node_modules/.cache",
     "build": "npx --yes react-scripts build",
     "eject": "npx react-scripts eject",
     "start": "npm run clean && npx react-scripts start",
