--- a/packages/ddl-shim/package.json
+++ b/packages/ddl-shim/package.json
@@ -23,7 +23,7 @@
     ],
     "scripts": {
         "preinstall": "echo \"\" > cli.js",
-        "clean": "rimraf bin lib* types dist ./src/ddl*Schema*.ts ./schema/*.json *.tsbuildinfo",
+        "clean": "rimraf --glob bin lib* types dist ./src/ddl*Schema*.ts ./schema/*.json *.tsbuildinfo",
         "compile-es6": "tsc --module es6 --outDir ./lib-es6",
         "compile-es6-watch": "npm run compile-es6 -- -w",
         "generate-v1": "ts-json-schema-generator --tsconfig tsconfig-schema.json --type DDLSchema > ./schema/v1.json",
