WIP Bump Rollup

--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "dev-start": "ws",
     "update-workspaces": "lerna run --stream update",
     "update-root": "npx npm-check-updates -u -t minor",
+    "update-root-major": "npx npm-check-updates -u",
     "update": "run-p update-workspaces update-root"
   },
   "devDependencies": {
@@ -118,17 +119,18 @@
     "@microsoft/api-documenter": "7.25.4",
     "@microsoft/api-extractor": "7.47.0",
     "@microsoft/api-extractor-model": "7.29.2",
-    "@rollup/plugin-alias": "3.1.9",
-    "@rollup/plugin-commonjs": "21.1.0",
-    "@rollup/plugin-node-resolve": "13.3.0",
-    "@rollup/plugin-typescript": "8.5.0",
+    "@rollup/plugin-alias": "5.1.0",
+    "@rollup/plugin-commonjs": "26.0.1",
+    "@rollup/plugin-node-resolve": "15.2.3",
+    "@rollup/plugin-terser": "0.4.4",
+    "@rollup/plugin-typescript": "11.1.6",
     "@types/chai": "4.3.16",
-    "@types/mocha": "9.1.1",
+    "@types/mocha": "10.0.7",
     "@typescript-eslint/eslint-plugin": "7.14.1",
     "@typescript-eslint/parser": "7.14.1",
     "chai": "5.1.1",
     "copyfiles": "2.4.1",
-    "css-loader": "6.11.0",
+    "css-loader": "7.1.2",
     "dojo-webpack-plugin": "3.0.6",
     "downlevel-dts": "0.11.0",
     "esbuild-plugin-alias": "^0.2.1",
@@ -142,20 +144,19 @@
     "npm-run-all": "4.1.5",
     "nx": "19.3.2",
     "postcss": "8.4.38",
-    "puppeteer": "21.11.0",
+    "puppeteer": "22.12.1",
     "rimraf": "5.0.7",
-    "rollup": "2.79.1",
+    "rollup": "4.18.0",
     "rollup-plugin-postcss": "4.0.2",
     "rollup-plugin-sourcemaps": "0.6.3",
-    "rollup-plugin-terser": "7.0.2",
     "rollup-plugin-transform-tagged-template": "0.0.3",
-    "source-map-loader": "3.0.2",
-    "style-loader": "3.3.4",
+    "source-map-loader": "5.0.0",
+    "style-loader": "4.0.0",
     "terser": "5.31.1",
     "terser-webpack-plugin": "5.3.10",
     "typescript": "5.5.2",
     "url-loader": "4.1.1",
-    "vitepress": "0.22.4",
+    "vitepress": "1.2.3",
     "webpack": "5.92.1",
     "webpack-cli": "5.1.4",
     "webpack-hasjs-plugin": "1.0.4"
