--- a/packages/phosphor-shim/package.json
+++ b/packages/phosphor-shim/package.json
@@ -44,8 +44,7 @@
         "@lumino/widgets": "1.37.2"
     },
     "devDependencies": {
-        "@hpcc-js/bundle": "^2.11.5",
-        "@rollup/plugin-replace": "4.0.0"
+        "@hpcc-js/bundle": "^2.11.5"
     },
     "repository": {
         "type": "git",
