--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "@microsoft/api-extractor-model": "7.29.2",
     "@rollup/plugin-alias": "5.1.0",
     "@rollup/plugin-commonjs": "26.0.1",
+    "@rollup/plugin-json": "6.1.0",
     "@rollup/plugin-node-resolve": "15.2.3",
     "@rollup/plugin-replace": "5.0.7",
     "@rollup/plugin-terser": "0.4.4",
@@ -148,6 +149,7 @@
     "puppeteer": "22.12.1",
     "rimraf": "5.0.7",
     "rollup": "4.18.0",
+    "rollup-plugin-add-shebang": "0.3.1",
     "rollup-plugin-postcss": "4.0.2",
     "rollup-plugin-sourcemaps": "0.6.3",
     "rollup-plugin-transform-tagged-template": "0.0.3",
