--- a/packages/dataflow/package.json
+++ b/packages/dataflow/package.json
@@ -27,7 +27,7 @@
         "compile-es6-watch": "npm run compile-es6 -- -w",
         "compile-umd": "tsc --module umd --outDir ./lib-umd",
         "compile-umd-watch": "npm run compile-umd -- -w",
-        "bundle": "rollup -c --bundleConfigAsMjs",
+        "bundle": "rollup -c",
         "bundle-watch": "npm run bundle -- -w",
         "minimize": "terser dist/index.js -c -m --source-map \"content='dist/index.js.map',url='index.min.js.map'\" -o dist/index.min.js",
         "gen-legacy-types": "downlevel-dts ./types ./types-3.4",
