WIP - Chart vitest

--- a/packages/chart/package.json
+++ b/packages/chart/package.json
@@ -35,6 +35,8 @@
         "stamp": "node ../../node_modules/@hpcc-js/bundle/src/stamp.js",
         "lint": "eslint ./src",
         "docs": "typedoc --options tdoptions.json .",
+        "test-browser": "vitest run --project browser",
+        "test": "vitest run",
         "update": "npx --yes npm-check-updates -u -t minor"
     },
     "dependencies": {
