--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "esbuild-plugin-alias": "0.2.1",
     "esbuild-plugin-umd-wrapper": "3.0.0",
     "eslint": "8.57.0",
+    "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-react-hooks": "4.6.2",
     "jasmine": "^5.3.0",
     "jasmine-browser-runner": "^2.5.0",
@@ -133,8 +134,8 @@
     "terser-webpack-plugin": "5.3.10",
     "typescript": "5.5.4",
     "url-loader": "4.1.1",
-    "vitest": "2.1.1",
     "vitepress": "0.22.4",
+    "vitest": "2.1.1",
     "webpack": "5.94.0",
     "webpack-cli": "5.1.4",
     "webpack-hasjs-plugin": "1.0.4"
