--- a/packages/chart/.vscode/launch.json
+++ b/packages/chart/.vscode/launch.json
@@ -1,19 +1,58 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch Edge",
+            "name": "test-browser-start",
+            "type": "node",
             "request": "launch",
-            "type": "msedge",
-            "url": "file:///${workspaceRoot}/index.html",
-            "webRoot": "${workspaceFolder}",
-            "sourceMapPathOverrides": {
-                "webpack:///./*": "${workspaceRoot}/*",
-                "webpack:///*": "/*"
+            "program": "${workspaceRoot}/../../node_modules/vitest/vitest.mjs",
+            "console": "integratedTerminal",
+            "args": [
+                "run",
+                "--inspect-brk",
+                "--project",
+                "browser",
+                "--no-file-parallelism"
+            ],
+            "presentation": {
+                "hidden": true
+            },
+        },
+        {
+            "name": "test-browser-attach",
+            "type": "chrome",
+            "request": "attach",
+            "port": 9229,
+            "presentation": {
+                "hidden": true
             }
         },
+        {
+            "name": "test-node",
+            "type": "node",
+            "request": "launch",
+            "runtimeArgs": [
+                "run-script",
+                "test-node"
+            ],
+            "runtimeExecutable": "npm",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "outFiles": [
+                "${workspaceFolder}/**/*.js",
+                "!**/node_modules/**"
+            ],
+        }
+    ],
+    "compounds": [
+        {
+            "name": "test-browser",
+            "configurations": [
+                "test-browser-attach",
+                "test-browser-start"
+            ],
+            "stopAll": true
+        }
     ]
 }
