--- a/packages/chart/package.json
+++ b/packages/chart/package.json
@@ -36,6 +36,7 @@
         "lint": "eslint ./src",
         "docs": "typedoc --options tdoptions.json .",
         "test-browser": "vitest run --project browser",
+    "test-node": "vitest run --project node",
         "test": "vitest run",
         "update": "npx --yes npm-check-updates -u -t minor"
     },
