feat: Switch to esbuild (common, api, chart)
Signed-off-by: Gordon Smith <GordonJSmith@gmail.com>

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "xutils/*",
     "packages/api",
     "xpackages/bundle",
-    "xpackages/chart",
+    "packages/chart",
     "xpackages/codemirror",
     "xpackages/codemirror-shim",
     "packages/common",
