--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -7,7 +7,7 @@
         "emitDeclarationOnly": true,
         "declaration": true,
         "declarationDir": "types",
-        "strict": true,
+        "strict": false,
         "noImplicitAny": false,
         "noImplicitThis": false,
         "strictNullChecks": false,
