WIP Passing html and react

--- a/packages/codemirror-shim/package.json
+++ b/packages/codemirror-shim/package.json
@@ -29,7 +29,7 @@
         "lint-fix": "eslint --fix src/**/*.ts",
         "docs": "typedoc --options tdoptions.json .",
         "update": "npx --yes npm-check-updates -u -t minor",
-        "update-major": "npx -yes npm-check-updates -u"
+        "update-major": "npx --yes npm-check-updates -u"
     },
     "dependencies": {},
     "devDependencies": {
