--- a/demos/gallery/package.json
+++ b/demos/gallery/package.json
@@ -7,7 +7,7 @@
         "clean": "rimraf --glob types dist *.tsbuildinfo",
         "lint": "eslint .",
         "dev": "vite",
-        "build": "tsc -b && vite build",
+        "buildxxx": "tsc -b && vite build",
         "preview": "vite preview",
         "gen-filejson": "node ./util/dir2json ./samples",
         "update": "npx --yes npm-check-updates -u -t minor"
@@ -17,21 +17,21 @@
         "@fluentui/react-hooks": "8.8.16",
         "@fluentui/react-icons-mdl2": "1.3.80",
         "@fluentui/react-nav-preview": "0.9.1",
-        "d3-random": "3",
-        "react": "18.3.1",
-        "react-dom": "18.3.1"
+        "d3-random": "3"
     },
     "devDependencies": {
-        "@eslint/js": "9.13.0",
+        "@eslint/js": "9.14.0",
         "@types/react": "18.3.12",
         "@types/react-dom": "18.3.1",
-        "@vitejs/plugin-react-swc": "3.5.0",
-        "eslint": "9.13.0",
+        "@vitejs/plugin-react-swc": "3.7.1",
+        "eslint": "9.14.0",
         "eslint-plugin-react-hooks": "5.0.0",
         "eslint-plugin-react-refresh": "0.4.14",
-        "globals": "15.11.0",
-        "typescript": "5.6.2",
-        "typescript-eslint": "8.11.0",
+        "globals": "15.12.0",
+        "react": "18.3.1",
+        "react-dom": "18.3.1",
+        "typescript": "5.6.3",
+        "typescript-eslint": "8.13.0",
         "vite": "5.4.10"
     }
 }
