--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "uninstall": "lerna clean && rimraf --glob packages/**/node_modules demos/**/node_modules apps/**/node_modules package-lock.json node_modules",
     "clean-root": "rimraf --glob build coverage dist lib* types temp tmp *.tsbuildinfo .vitepress/dist .vitepress/cache docs/api",
     "clean": "lerna run clean && npm run clean-root",
+    "dev": "vite",
     "stamp": "lerna run stamp",
     "stamp-main": "node ./utils/bundle/src/stamp-main.js",
     "stamp-all": "run-s stamp stamp-main",
@@ -103,28 +104,34 @@
     "serve-docs-build": "vitepress serve --port 3000 .",
     "serve-vite": "vite",
     "dev-start": "ws",
-    "update-workspaces": "lerna run --stream update",
+    "update-workspaces": "lerna run update",
     "update-root": "npx npm-check-updates -u -t minor",
     "update-root-major": "npx npm-check-updates -u",
     "update": "run-p update-workspaces update-root"
   },
   "devDependencies": {
+    "@eslint/js": "^9.14.0",
     "@microsoft/api-documenter": "7.25.21",
     "@microsoft/api-extractor": "7.47.11",
     "@microsoft/api-extractor-model": "7.29.8",
-    "@typescript-eslint/eslint-plugin": "8.12.2",
-    "@typescript-eslint/parser": "8.12.2",
+    "@typescript-eslint/eslint-plugin": "8.13.0",
+    "@typescript-eslint/parser": "8.13.0",
+    "@vitejs/plugin-react-swc": "3.7.1",
     "@vitest/browser": "2.1.4",
     "@vitest/coverage-v8": "2.1.4",
-    "eslint": "9.14.0",
+    "eslint": "^9.14.0",
+    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "5.0.0",
+    "globals": "^15.12.0",
     "lerna": "8.1.9",
     "npm-check-updates": "16.14.20",
     "npm-run-all": "4.1.5",
     "playwright": "1.48.2",
     "rimraf": "5.0.10",
     "typescript": "5.6.3",
-    "vitepress": "1.4.5",
+    "typescript-eslint": "^8.13.0",
+    "vite": "5.4.10",
+    "vitepress": "1.5.0",
     "vitest": "2.1.4"
   },
   "overrides": {
