--- a/packages/dgrid/package.json
+++ b/packages/dgrid/package.json
@@ -32,7 +32,7 @@
         "test": "vitest run",
         "coverage": "vitest run --coverage",
         "update": "npx --yes npm-check-updates -u -t minor",
-        "update-major": "npx -yes npm-check-updates -u"
+        "update-major": "npx --yes npm-check-updates -u"
     },
     "dependencies": {
         "@hpcc-js/common": "^3.1.0",
