--- a/packages/esbuild-plugins/package.json
+++ b/packages/esbuild-plugins/package.json
@@ -30,7 +30,7 @@
     "build-dev": "run-p build-types build-ts-dev",
     "build-sfx-wrapper-dev": "esbuild ./src/sfx-wrapper.ts --platform=node --format=esm --bundle --packages=external --sourcemap --outfile=./dist/sfx-wrapper.js",
     "build-sfx-wrapper": "npm run build-sfx-wrapper-dev -- --minify",
-    "build": "run-p build-types build-ts build-sfx-wrapper",
+    "build": "run-s build-types build-ts build-sfx-wrapper",
     "lint-skypack": "npx -y @skypack/package-check",
     "lint-eslint": "eslint src/**/*.ts",
     "lint": "run-p lint-eslint lint-skypack",
