--- a/packages/graph/package.json
+++ b/packages/graph/package.json
@@ -32,19 +32,19 @@
         "test": "vitest run",
         "coverage": "vitest run --coverage",
         "update": "npx --yes npm-check-updates -u -t minor",
-        "update-major": "npx -yes npm-check-updates -u"
+        "update-major": "npx --yes npm-check-updates -u"
     },
     "dependencies": {
         "@hpcc-js/api": "^3.1.0",
         "@hpcc-js/common": "^3.1.0",
-        "@hpcc-js/html": "^2.44.0",
-        "@hpcc-js/react": "^2.55.0",
+        "@hpcc-js/html": "^3.0.0",
+        "@hpcc-js/react": "^3.0.0",
         "@hpcc-js/util": "^3.1.0"
     },
     "devDependencies": {
         "@hpcc-js/esbuild-plugins": "^1.2.0",
-        "@hpcc-js/wasm-graphviz": "1.5.0",
-        "@types/d3-transition": "1.3.5",
+        "@hpcc-js/wasm-graphviz": "1.6.1",
+        "@types/d3-transition": "1.3.6",
         "@types/dagre": "0.7.52",
         "d3-force": "^1",
         "d3-geo": "^1",
@@ -53,7 +53,13 @@
         "d3-shape": "^1",
         "d3-tile": "^1",
         "d3-transition": "^1",
-        "dagre": "0.8.5"
+        "dagre": "0.8.5",
+        "react": "18.3.1",
+        "react-dom": "18.3.1"
+    },
+    "peerDependencies": {
+        "react": "^17.0.0 || ^18.0.0",
+        "react-dom": "^17.0.0 || ^18.0.0"
     },
     "repository": {
         "type": "git",
