--- a/packages/html/package.json
+++ b/packages/html/package.json
@@ -32,12 +32,12 @@
         "test": "vitest run",
         "coverage": "vitest run --coverage",
         "update": "npx --yes npm-check-updates -u -t minor",
-        "update-major": "npx -yes npm-check-updates -u"
+        "update-major": "npx --yes npm-check-updates -u"
     },
     "dependencies": {
         "@hpcc-js/common": "^3.1.0",
         "@hpcc-js/preact-shim": "^3.0.0",
-        "@hpcc-js/util": "^3.0.0"
+        "@hpcc-js/util": "^3.1.0"
     },
     "devDependencies": {
         "@hpcc-js/esbuild-plugins": "^1.2.0",
