--- a/packages/graph/package.json
+++ b/packages/graph/package.json
@@ -44,6 +44,7 @@
     "devDependencies": {
         "@hpcc-js/esbuild-plugins": "^1.2.0",
         "@hpcc-js/wasm-graphviz": "1.6.1",
+        "@hpcc-js/preact-shim": "^3.0.0",
         "@types/d3-transition": "1.3.6",
         "@types/dagre": "0.7.52",
         "d3-force": "^1",
@@ -53,13 +54,7 @@
         "d3-shape": "^1",
         "d3-tile": "^1",
         "d3-transition": "^1",
-        "dagre": "0.8.5",
-        "react": "18.3.1",
-        "react-dom": "18.3.1"
-    },
-    "peerDependencies": {
-        "react": "^17.0.0 || ^18.0.0",
-        "react-dom": "^17.0.0 || ^18.0.0"
+        "dagre": "0.8.5"
     },
     "repository": {
         "type": "git",
