--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -39,6 +39,7 @@
     },
     "devDependencies": {
         "@hpcc-js/esbuild-plugins": "^1.2.0",
+        "@hpcc-js/preact-shim": "^3.0.0",
         "react": "18.3.1",
         "react-dom": "18.3.1"
     },
