--- a/packages/graph/package.json
+++ b/packages/graph/package.json
@@ -37,16 +37,15 @@
     "dependencies": {
         "@hpcc-js/api": "^3.1.0",
         "@hpcc-js/common": "^3.1.0",
-        "@hpcc-js/html": "^3.0.0",
         "@hpcc-js/react": "^3.0.0",
         "@hpcc-js/util": "^3.1.0"
     },
     "devDependencies": {
         "@hpcc-js/esbuild-plugins": "^1.2.0",
-        "@hpcc-js/wasm-graphviz": "1.6.1",
         "@hpcc-js/preact-shim": "^3.0.0",
+        "@hpcc-js/wasm-graphviz": "1.6.1",
+        "@dagrejs/dagre": "1.1.4",
         "@types/d3-transition": "1.3.6",
-        "@types/dagre": "0.7.52",
         "d3-force": "^1",
         "d3-geo": "^1",
         "d3-interpolate-path": "2.3.0",
@@ -54,7 +53,12 @@
         "d3-shape": "^1",
         "d3-tile": "^1",
         "d3-transition": "^1",
-        "dagre": "0.8.5"
+        "react": "18.3.1",
+        "react-dom": "18.3.1"
+    },
+    "peerDependencies": {
+        "react": "^17.0.0 || ^18.0.0",
+        "react-dom": "^17.0.0 || ^18.0.0"
     },
     "repository": {
         "type": "git",
