WIP-Minimal linting

--- a/packages/comms/package.json
+++ b/packages/comms/package.json
@@ -26,8 +26,8 @@
         "gen-types-watch": "npm run gen-types -- --watch",
         "build": "run-p gen-types bundle",
         "stamp": "node ../../node_modules/@hpcc-js/bundle/src/stamp.js",
-        "lint": "eslint ./src",
-        "lint-fix": "eslint --fix src/**/*.ts",
+        "lint": "eslint --ignore-pattern ./src/services/wsdl/ ./src",
+        "lint-fix": "eslint --fix --ignore-pattern ./src/services/wsdl/ ./src",
         "docs": "typedoc --options tdoptions.json .",
         "test-browser": "vitest run --project browser",
         "test-node": "vitest run --project node",
