--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
     "update": "run-p update-workspaces update-root"
   },
   "devDependencies": {
-    "@eslint/js": "^9.14.0",
+    "@eslint/js": "9.14.0",
     "@microsoft/api-documenter": "7.25.21",
     "@microsoft/api-extractor": "7.47.11",
     "@microsoft/api-extractor-model": "7.29.8",
@@ -119,8 +119,8 @@
     "@vitejs/plugin-react-swc": "3.7.1",
     "@vitest/browser": "2.1.4",
     "@vitest/coverage-v8": "2.1.4",
-    "eslint": "^9.14.0",
-    "eslint-plugin-react": "^7.37.2",
+    "eslint": "9.14.0",
+    "eslint-plugin-react": "7.37.2",
     "eslint-plugin-react-hooks": "5.0.0",
     "globals": "^15.12.0",
     "lerna": "8.1.9",
