--- a/packages/esbuild-plugins/tsconfig.json
+++ b/packages/esbuild-plugins/tsconfig.json
@@ -1,19 +1,10 @@
 {
+    "extends": "../tsconfig.json",
     "compilerOptions": {
         "rootDir": "./src",
-        "declarationDir": "./types",
-        "module": "NodeNext",
-        "target": "ESNext",
-        "declaration": true,
-        "emitDeclarationOnly": true,
-        "strict": true,
-        "skipLibCheck": true,
-        "allowImportingTsExtensions": true,
-        "forceConsistentCasingInFileNames": true,
-        "lib": []
+        "declarationDir": "./types"
     },
     "include": [
-        "./src/**/*"
-    ],
-    "references": []
+        "./src/index.ts"
+    ]
 }
