--- a/packages/chart/package.json
+++ b/packages/chart/package.json
@@ -39,7 +39,8 @@
     "dependencies": {
         "@hpcc-js/api": "^3.3.12",
         "@hpcc-js/common": "^3.4.2",
-        "@hpcc-js/util": "^3.3.12"
+        "@hpcc-js/util": "^3.3.12",
+        "tabster": "8.5.6"
     },
     "devDependencies": {
         "@hpcc-js/esbuild-plugins": "^1.5.2",
@@ -63,8 +64,7 @@
         "d3-time-format": "^2",
         "d3-transition": "^1",
         "d3-zoom": "^1",
-        "d3v4-bullet": "1.0.7",
-        "tabster": "8.5.6"
+        "d3v4-bullet": "1.0.7"
     },
     "repository": {
         "type": "git",
