--- a/packages/chart/package.json
+++ b/packages/chart/package.json
@@ -39,8 +39,7 @@
     "dependencies": {
         "@hpcc-js/api": "^3.3.12",
         "@hpcc-js/common": "^3.4.2",
-        "@hpcc-js/util": "^3.3.12",
-        "tabster": "8.5.6"
+        "@hpcc-js/util": "^3.3.12"
     },
     "devDependencies": {
         "@hpcc-js/esbuild-plugins": "^1.5.2",
