--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -40,41 +40,41 @@
     },
     "dependencies": {
         "@hpcc-js/util": "^3.3.12",
-        "@types/d3-array": "1.2.12",
-        "@types/d3-brush": "1.1.8",
-        "@types/d3-collection": "1.0.13",
-        "@types/d3-color": "1.4.5",
-        "@types/d3-dispatch": "1.0.12",
-        "@types/d3-drag": "1.2.8",
-        "@types/d3-dsv": "1.2.8",
-        "@types/d3-ease": "1.0.13",
-        "@types/d3-format": "1.4.5",
-        "@types/d3-interpolate": "1.4.5",
-        "@types/d3-scale": "1.0.22",
-        "@types/d3-selection": "1.4.7",
-        "@types/d3-time-format": "2.3.4",
-        "@types/d3-transition": "1.3.6",
-        "@types/d3-zoom": "1.8.7"
+        "@types/d3-array": "3.2.2",
+        "@types/d3-brush": "3.0.6",
+        "@types/d3-color": "3.1.3",
+        "@types/d3-dispatch": "3.0.7",
+        "@types/d3-drag": "3.0.7",
+        "@types/d3-dsv": "3.0.7",
+        "@types/d3-ease": "3.0.2",
+        "@types/d3-format": "3.0.4",
+        "@types/d3-interpolate": "3.0.4",
+        "@types/d3-scale": "4.0.9",
+        "@types/d3-scale-chromatic": "3.1.0",
+        "@types/d3-selection": "3.0.11",
+        "@types/d3-time-format": "4.0.3",
+        "@types/d3-transition": "3.0.9",
+        "@types/d3-zoom": "3.0.8"
     },
     "devDependencies": {
         "@hpcc-js/esbuild-plugins": "^1.5.2",
         "colorbrewer": "1.6.1",
-        "d3-array": "^1",
-        "d3-brush": "^1",
-        "d3-collection": "^1",
+        "d3-array": "^3",
+        "d3-brush": "^3",
         "d3-color": "3.1.0",
-        "d3-dispatch": "^1",
-        "d3-drag": "^1",
-        "d3-dsv": "^1",
-        "d3-ease": "^1",
-        "d3-format": "^1",
-        "d3-interpolate": "^1",
-        "d3-path": "^1",
-        "d3-scale": "^1",
-        "d3-selection": "^1",
-        "d3-time-format": "^2",
-        "d3-transition": "^1",
-        "d3-zoom": "^1",
+        "d3-dispatch": "^3",
+        "d3-drag": "^3",
+        "d3-dsv": "^3",
+        "d3-ease": "^3",
+        "d3-format": "^3",
+        "d3-interpolate": "^3",
+        "d3-path": "^3",
+        "d3-scale": "^4",
+        "d3-scale-chromatic": "^3",
+        "d3-selection": "^3",
+        "d3-time-format": "^4",
+        "d3-transition": "^3",
+        "d3-zoom": "^3",
         "font-awesome": "4.7.0"
     },
     "repository": {
