--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -23,6 +23,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Initialize Release Please
+        if: ${{ github.event_name == 'push' }}
         id: release
         uses: googleapis/release-please-action@v4
         with:
